--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -46,7 +46,7 @@ jobs:
           images: "${{ env.REGISTRY }}/${{ github.repository }}/go"
           tags: |
             type=raw,value=${{ matrix.version }}
-            ${{ matrix.version == env.LATEST && 'type=raw,value=latest' }}
+            ${{ matrix.version == env.LATEST && 'type=raw,value=latest' || '' }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -65,6 +65,7 @@ jobs:
           context: ./go
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          annotations: ${{ steps.meta.outputs.annotations }}
           build-args:
             GO_VERSION=${{ matrix.version }}
           push: true
